[package]
name = "sesbo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"

[dependencies]
axum = "0.7"
clap = "4.5"
once_cell = "1.19"
rand = { version = "0.8", features = ["std", "std_rng"] }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "sync", "signal", "parking_lot"] }
