[package]
name = "sesbo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"

[dependencies]
anyhow = "1.0"
axum = "0.7"
clap = { version = "4.5", features = ["derive"] }
once_cell = "1.19"
rand = { version = "0.8", features = ["std", "std_rng"] }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "sync", "signal", "parking_lot"] }
